# fastcrypto

./: Cargo.toml
fastcrypto-kotlin/: build.gradle.kts  settings.gradle.kts
fastcrypto-kotlin/rust/: Cargo.toml
fastcrypto-kotlin/rust/src/: lib.rs
fastcrypto-kotlin/src/commonMain/kotlin/uniffi/fastcrypto_uniffi/: fastcrypto_uniffi.kt
fastcrypto-kotlin/src/jvmTest/kotlin/: FastCryptoTest.kt
